ecmascript/parser/tests/test262-error-references/fail/e4b42b8e20501fcc.js.stderr
error: Unexpected token Some(Comma)
 --> $DIR/tests/test262-parser/fail/e4b42b8e20501fcc.js:1:3
  |
1 | ({,a,} = 0)
  |   ^

